add many tables on database and changed desing tables on web site

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,11 @@ spring.security.user.name=admin
 spring.security.user.password=admin
 
 spring.jpa.open-in-view=false
+
+
+spring.boot.admin.client.url=http://localhost:8080
+server.port=8081
+
+management.endpoints.web.exposure.include=*
+management.info.env.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/
